[metadata]
name = ml2_test_mech
summary = Sample Neutron ML2 Driver
classifier =
    Development Status :: 3 - Alpha
    Programming Language :: Python
description-file =
    README.rst

[files]
packages =
    ml2_test_mech

[entry_points]
neutron.ml2.mechanism_drivers =
    test_mech = test_mech.test_mech:TestMechanismDriver
